samples/_failures_safe/1761294281_78f4f1_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_fd60eee1.c: In function ‘main’:
./samples/SAFE/__tmp_fd60eee1.c:152:17: error: expected declaration or statement at end of input
  152 |                 break;
      |                 ^~~~~
./samples/SAFE/__tmp_fd60eee1.c:152:17: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_fd60eee1.c:152:17: error: expected declaration or statement at end of input
